apollo-router/tests/snapshots/redis_test__test__apq.snap
---
source: apollo-router/tests/redis_test.rs
expression: s.unwrap()
---
"{ topProducts { name name2:name } }"
