apollo-router/tests/snapshots/redis_test__test__entity_cache-2.snap
---
source: apollo-router/tests/redis_test.rs
expression: "v.as_object().unwrap().get(\"data\").unwrap()"
---
{
  "topProducts": [
    {
      "__typename": "Product",
      "upc": "1",
      "name": "chair"
    },
    {
      "__typename": "Product",
      "upc": "2",
      "name": "table"
    }
  ]
}
