apollo-router/tests/snapshots/redis_test__test__entity_cache-4.snap
---
source: apollo-router/tests/redis_test.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it"
          }
        ]
      },
      {
        "name": "plate",
        "reviews": [
          {
            "body": "I can eat in it"
          }
        ]
      }
    ]
  }
}
