apollo-router/tests/snapshots/redis_test__test__entity_cache-5.snap
---
source: apollo-router/tests/redis_test.rs
expression: "v.as_object().unwrap().get(\"data\").unwrap()"
---
{
  "reviews": [
    {
      "body": "I can eat in it"
    }
  ]
}
