apollo-router/tests/snapshots/redis_test__test__entity_cache.snap
---
source: apollo-router/tests/redis_test.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it"
          }
        ]
      },
      {
        "name": "table",
        "reviews": [
          {
            "body": "I can sit on it"
          },
          {
            "body": "I can eat on it"
          }
        ]
      }
    ]
  }
}
